<resources>
    <string name="app_name">Dicoding Story</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Insert your email</string>
    <string name="password">Insert your password</string>
    <string name="name">Insert your full name</string>
    <string name="content_description_media">Description Media</string>
    <string name="title">Post Title</string>
    <string name="secondary_text">Secondery Text Post</string>
    <string name="supporting_text">Text Value</string>
    <string name="action_1">Button</string>
    <string name="action_2">Button</string>
    <string name="text_label_1">Home</string>
    <string name="text_label_2">Add Post</string>
</resources>